# Fonty

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-icons.ps1  create-shortcut.ps1  dev-launch.ps1  index.html  package-lock.json  package.json
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activator.rs  commands.rs  db.rs  error.rs  google_fonts.rs  lib.rs  main.rs  parser.rs  scanner.rs
src/components/: ActivationToggle.tsx  BusySpinner.tsx  CollectionsSection.tsx  ColorSwatch.tsx  ContextMenu.tsx  FamilyDetail.tsx  FamilyGrid.tsx  FamilyList.tsx  FamilyRow.tsx  FolderTreeNode.tsx  FontPreview.tsx  GoogleFamilyDetail.tsx  GoogleFontsView.tsx  PinButton.tsx  PinnedDock.tsx  SettingsToggle.tsx  SettingsView.tsx  Sidebar.tsx  StarButton.tsx  ThemeToggle.tsx  Toast.tsx  TopBar.tsx  TrayExpandToggle.tsx  ViewModeToggle.tsx  collectionMenuItems.tsx  useTrayExpansion.ts
