[package]
name = "fonty"
version = "0.1.0-alpha"
description = "FONTY — local Windows font manager with temporal activation"
authors = ["Adria"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Rebelkernel/Fonty"
homepage = "https://github.com/Rebelkernel/Fonty"
readme = "../README.md"

[lib]
name = "fonty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ttf-parser = "0.25"
rusqlite = { version = "0.37", features = ["bundled"] }
rayon = "1"
notify = "8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
ureq = { version = "2", features = ["tls", "json"] }
urlencoding = "2"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"

[profile.release]
lto = true
codegen-units = 1
strip = true

